Fixed overlay text being too big when window > 1000px wide; removed access to style.php

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,6 @@ body {
 
 @media screen and (min-width: 1400px) {
 	.card-overlay {
-		font-size: 1.35em;
+		font-size: 1.25em;
 	}
 }
